# server/route/index.ts
@@ -1,0 +1,4 @@
+export { healthRouter } from './health';
+export { userRouter } from './user';
+export { projectRouter } from './project';
+export { instanceRouter } from './instance';
